tests/programs/taint/a4-test-cases/pass/taint_context_sensitive_pass1.rice
#[secure]
fn secure() -> int {
  0 
}

fn id(x: int) -> int {
  x
}

fn main() {
  let a = id(secure()) in
  let b = id(1) in
  println(int_to_string(b))
}