tests/programs/taint/a4-test-cases/fail/taint_array_fail2.rice
#[secure]
fn secure() -> int {
  0 
}

fn main() {
  let a = [1] in
  println(int_to_string(a[secure()]))
}